@@ -154,6 +154,9 @@
                     <argLine>
                         --add-modules javafx.controls,javafx.fxml,javafx.graphics
                         --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application=org.testfx
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.application=org.testfx
                         --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui=org.testfx
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
